sqlite database added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,9 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.ayush.sunshine.app.MainActivity" />
         </activity>
+        <provider
+            android:authorities="com.example.ayush.sunshine.app"
+            android:name=".data.WeatherProvider"/>
     </application>
 
 </manifest>
