--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,13 @@
         </activity>
         <provider
             android:authorities="com.example.ayush.sunshine.app"
-            android:name=".data.WeatherProvider"/>
+            android:name=".data.WeatherProvider"
+            android:enabled="true"
+            android:exported="true"
+            android:permission="com.myAPP.LICENSE_TO_KILL"/>
     </application>
+    <permission android:name="com.myAPP.LICENSE_TO_KILL"
+        android:protectionLevel="dangerous"
+        android:label="Licensed to kill"></permission>
 
 </manifest>
